<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:src="@mipmap/avatar"/>

    <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.05"-->
        <!--android:src="@mipmap/ic_launcher"-->
        <!--/>-->

    <Button
        android:id="@+id/photo_upload"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/upload_photo"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.27"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.38"
        />


    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:alpha="0.23"
        android:ems="15"
        android:hint="@string/name"
        android:textColorHint="@color/colorHint"
        android:inputType="textPersonName"
        android:background="@drawable/textviewshape"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.45"
        />

    <EditText
        android:id="@+id/user_dob"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:alpha="0.23"
        android:ems="15"
        android:hint="@string/dob"
        android:textColorHint="@color/colorHint"
        android:inputType="date"
        android:background="@drawable/textviewshape"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.55"
        />

    <EditText
        android:id="@+id/user_exp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:alpha="0.23"
        android:ems="15"
        android:hint="@string/experience"
        android:textColorHint="@color/colorHint"
        android:inputType="number"
        android:background="@drawable/textviewshape"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.65"
        />

    <EditText
        android:id="@+id/addr1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:alpha="0.23"
        android:ems="15"
        android:hint="@string/addr1"
        android:textColorHint="@color/colorHint"
        android:inputType="text"
        android:background="@drawable/textviewshape"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.75"
        />

    <EditText
        android:id="@+id/addr2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:alpha="0.23"
        android:ems="15"
        android:hint="@string/addr2"
        android:textColorHint="@color/colorHint"
        android:inputType="text"
        android:background="@drawable/textviewshape"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/btnSubmit"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.98"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:progressDrawable="@drawable/circular_progress_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        app:layout_constraintVertical_bias="0.18"/>

</android.support.constraint.ConstraintLayout>